fix z-index bug

--- a/media/css/firefox/whatsnew/whatsnew-lite.scss
+++ b/media/css/firefox/whatsnew/whatsnew-lite.scss
@@ -95,6 +95,7 @@
 
     .lite-copy {
         text-align: center;
+        z-index: 1;
     }
 
     @media #{$mq-lg} {
